--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
             </div>
             <div class="form-group">
                 <label for="ingredients">Ingredientes:</label>
-                <textarea id="ingredients" name="ingredients" rows="4" required></textarea>
+                <textarea id="ingredients" name="ingredients" rows="4" required style="white-space: pre-line;"></textarea>
             </div>
             <div class="form-group">
                 <label for="instructions">Instrucciones:</label>
-                <textarea id="instructions" name="instructions" rows="4" required></textarea>
+                <textarea id="instructions" name="instructions" rows="4" required style="white-space: pre-line;"></textarea>
             </div>
+            
             
             <div class="center-button"> <!-- Nuevo contenedor para centrar el botón -->
                 <button id="addRecipeBtn" class="button-82-pushable" role="button">
