--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <button class="tab-button" data-category="Cocina Plant Based">Cocina Plant Based</button>
         <button class="tab-button" data-category="Cocina Vegetariana">Cocina Vegetariana</button>
         <button class="tab-button" data-category="Pasteleria">Pastelería</button>
+        <button class="tab-button" data-category="Panaderia">Panadería</button>
     </div>
 
     <div class="container">
@@ -47,6 +48,7 @@
                     <option value="Cocina Plant Based">Cocina Plant Based</option>
                     <option value="Cocina Vegetariana">Cocina Vegetariana</option>
                     <option value="Pasteleria">Pastelería</option>
+                    <option value="Panaderia">Panadería</option>
                 </select>
             </div>
             <div class="center-button">
