Update index.html Favicon

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Recetario de Chía - Encuentra y comparte las mejores recetas plant based, vegetarianas y de pastelería por parte de Sofía Mayor.">
     <title>Recetario de Chía</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/jpeg" href="images/8ce655dde3e1c7c681bfc9812a0711e7.jpg">
 </head>
 <body>
     <!-- Titulo de la pagina -->
